# cursor-chat-handler

./: .gitignore  Cargo.toml  GUIA_PARA_IA.md  LICENSE  README.md  install.sh
.cursor/rules/: backend-rust.mdc  global-contracts.mdc
.github/workflows/: ci.yml
docs/: PLANO_FRONTEND_LEPTOS.md
src/: main.rs
src/application/: extractor.rs  formatter.rs  mod.rs  parser.rs  restore_service.rs  storage_manager.rs  sync_service.rs
src/cli/: mod.rs
src/domain/: error.rs  mod.rs  models.rs  sync.rs
src/infrastructure/: config.rs  cursor_paths.rs  cursor_reset.rs  cursor_writer.rs  local_storage.rs  mod.rs  sqlite_reader.rs  systemd.rs
